2015-07-03  Paul J. Lucas  <paul@lucasmail.org>

   * Added more tests.

   * ad.1: Added description of -r option.

2015-06-25  Paul J. Lucas  <paul@lucasmail.org>

   * Added -r option.

2015-05-30  Paul J. Lucas  <paul@lucasmail.org>

   * Added tests.
   * Offsets can now be specified in hexadecimal.
   * Offsets can optionally have a unit suffix.
   * Major clean-up.

2015-05-25  Paul J. Lucas  <paul@lucasmail.org>

   * Initial version in git; now using configure.

2010-11-07  Paul J. Lucas  <paul@lucasmail.org>

   * ad.c: Removed K&R C-isms.

2006-07-07  Paul J. Lucas  <paul@lucasmail.org>

   * ad.c: Updated version to 1.1.1.

   * ad.c: 1. Changed tabs to spaces. 2. Fixed little endian bug.

   * ad.1: Updated e-mail address.

   * Makefile: Added "distclean" target.

2001-03-27  Paul J. Lucas  <paul@lucasmail.org>

   * Initial versions in CVS.