@@ -1,3 +1,7 @@
+2015-07-08  Paul J. Lucas  <paul@lucasmail.org>
+
+   * Added -C option.
+
 2015-07-03  Paul J. Lucas  <paul@lucasmail.org>
 
    * Added more tests.
